graph layout Fixed

--- a/views/charts.html
+++ b/views/charts.html
@@ -171,14 +171,32 @@ td, th {
           </div>
         
         </div>
-      </script>
-           <div>
-       <div id="timeline1"></div>
-        <div>
-          <div>
-          <div id = "stacked1"></div>
-        </div>   
 
+      </script>
+      <script id='specialPopup'><div style="text-align:center" class="popup">
+          <span class="popuptext" id="myPopup">A Simple Popup!</span>
+      </div>
+        
+      </script>
+      <div id=popUpContainer></div>
+
+
+
+
+
+      <div id='defaulView' align="right"></div>
+      
+      <script id="button_template"><button class='button button3' type="button" id='myBtn'>'Click for default view'</button></script>
+      <div class = "row">
+           <div>
+       <div class='column' align='left' id="timeline1"></div>
+        
+        </div> <div>
+
+          <div>
+          <div class='column' id = "stacked1"></div>
+          
+      </div>
        </div>
        </div>
             <div align="centre" id="sprintBarGraph"></div>
@@ -203,9 +221,7 @@ td, th {
       </div>
 
       
-<div class="popup" >
-  <span class="popuptext" id="myPopup">Click the timeline bars for more details</span>
-</div>
+
 
        <div id="info"></div>
 
