--- a/views/charts.html
+++ b/views/charts.html
@@ -199,11 +199,16 @@ td, th {
         </div> <div>
 
           <div>
-          <div class='column' id = "stacked1"></div>
-          
+         
+
       </div>
        </div>
        </div>
+       <div class = "row">
+       <div class='column' id='stackedDirty'></div>
+        <div class='column' id = "stacked1"></div>
+
+     </div>
             <div align="centre" id="sprintBarGraph"></div>
           <div>
 
