commits per developer added

--- a/views/charts.html
+++ b/views/charts.html
@@ -41,6 +41,7 @@ td, th {
       <a id="pullOverview" href="#review">Pull Request overview</a>
       <a id="pullreview" href="#review">Pull Request Review</a>
       <a id="pullPerDev" href="#pullPerDev">Pull Request Per Developer</a>
+      <a id="commitsPerDev" href="#commitsPerDev">Commit Per Developer</a>
     </div>
 
   </div>  
