--- a/views/index.hbs
+++ b/views/index.hbs
@@ -236,13 +236,13 @@ hr {
   <form class="modal-content" action="/users" method="post">
     <div class="container">
       <h1>Authorisation</h1>
-      <p>Please fill in your App's details, this will grant you access to your organisation's statistics.</p>
+      <p>Please fill in your Personal Access Token, this will grant you access to your organisation's statistics.</p>
       <hr>
       <label for="accessToken"><b>Access Token</b></label>
       <input type="text" placeholder="Enter Personal Access Token" name="accessToken" required>
 
 
-      <p>Click this link to create a GitHub Personal Access Token <a href="https://help.github.com/articles/installing-an-app-in-your-organization/" style="color:dodgerblue">GitHub App</a>.</p>
+      <p>Click this link to create a GitHub Personal Access Token. <a href="https://blog.github.com/2013-05-16-personal-api-tokens/" style="color:dodgerblue">GitHub Personal Access Token</a>. Please only check the box that says "Full control of private repositories".</p>
 
       <div class="clearfix">
         <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
