--- a/views/organisation.hbs
+++ b/views/organisation.hbs
@@ -241,7 +241,7 @@ hr {
 
         {{#if orgNames}}
               <h1>Select Organisation</h1>
-      <p>Please select the organisation you want to evaluate from the drop down</p>
+      <p>Please select the organisation you want to evaluate from the drop down.</p>
       <hr>
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn">Organisation List</button>
@@ -260,7 +260,7 @@ hr {
   <div>
   {{#if repoNames}}
         <h1>Select Repository</h1>
-      <p>Please select the repository you want to evaluate from the drop down</p>
+      <p>Please select the repository you want to evaluate from the drop down. Feel free to make use of the search option.</p>
       <hr>
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn">Available Repos</button>
