--- a/public/stylesheets/charts.css
+++ b/public/stylesheets/charts.css
@@ -418,6 +418,8 @@ Repository list dropdown button
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    position: absolute;
+    right: 20px;
 }
 .button3 {padding: 12px 24px;}
 
@@ -560,12 +562,14 @@ Create loader to show while waiting for data to finish loading*/
 
 
 .col-md-4{
-    border-radius: 25px;
-    border: 2px solid #73AD21;
+    border-radius: 15px;
+    border: 2px solid #e6beff;
+    background: #e6beff;
     padding: 20px; 
     width: 200px;
     height: 150px;
 }
+
 
 path {  stroke: #fff; }
 path:hover {  opacity:0.9; }
