--- a/views/charts.html
+++ b/views/charts.html
@@ -47,17 +47,11 @@ td, th {
   <div id="loader"  >
     <h1 class="center">Please wait while we fetch your repository information.</h1>
       <img src ="/cdn/gifs/RubixCube-8.gif" class="center">
-    </div>
+  </div>
 
   <div class="main">
       <!-- It is better to separate your template from the JS and you do that by placing the template in its own tag -->
     
-
-<!-- Dynamic Graph -->
-
-   
-
-<!-- Dynamic Graph -->
 
 <!--  code from James-->
 
@@ -193,21 +187,23 @@ td, th {
       <div id='dashboard'></div>
 
 
-
-      <div id='defaulView' align="right"></div>
+      <div id='defaulView'></div>
       
-      <script id="button_template" type="text/x-handlebars-template"><button class='button button3' type="button" id='myBtn'>'Click for default view'</button></script>
+      <script id="button_template" type="text/x-handlebars-template">
+        <div class='row'>
+  
+            <h2 align="left">Timeline of Sprints</h2>
+             
+            <button class='button button3' type="button" id='myBtn' align="right">'Click for default view'</button>
+          
+        </div>
+
+      </script>
       <div class = "row">
            <div>
        <div class='column' align='left' id="timeline1"></div>
         
-        </div> <div>
-
-          <div>
-         
-
-      </div>
-       </div>
+        </div> 
        </div>
        <div class = "row">
        <div class='column' id='stackedDirty'></div>
@@ -233,9 +229,10 @@ td, th {
       <div id="info"></div>
       <div id = 'dynamicBarGraph'></div>
       <script id='dynamicChart' type="text/x-handlebars-template">
+        <h2>General Trend chart: Comparison of multiple project statistics</h2>
         <div style='background-color: #F2EDE4'>
-                 <div class="container" style="margin-top: 20px;">
-            <div class="row" >
+                 <div style='background-color: #F2EDE4' class="container" style="margin-top: 20px;">
+            <div class="row" style='background-color: #F2EDE4' >
               <div class="col-md-4" >
                 <div class="panel panel-default">
                   <div class="panel-body">
@@ -244,7 +241,7 @@ td, th {
                   </div>
                 </div>
               </div>
-              <div class="col-md-8">
+              <div class="col-md-8" >
                 <div class="graph"></div>
               </div>
             </div>
