Minor updates to the content

--- a/views/charts.html
+++ b/views/charts.html
@@ -120,7 +120,7 @@ td, th {
   </div>
 
   <div align='centre' id="overviewPie"class="Ocolumn23" style="background-color:#bbb; text-align:center;">
-    <h2  style="text-align:left;">Project Pull Request Per Developer</h2>
+    <h2  style="text-align:left;">Total Project Pull Requests Per Developer</h2>
 
   </div>
 </div>
