--- a/public/stylesheets/charts.css
+++ b/public/stylesheets/charts.css
@@ -248,11 +248,7 @@ Repository list dropdown button
     background-color: #3e8e41;
 }
 .popup {
-    position: fixed;
-    bottom: 300;
-    right: 0;
-    z-index: -1;
-    width: 300px;
+    position: relative;
     display: inline-block;
     cursor: pointer;
     -webkit-user-select: none;
@@ -265,10 +261,11 @@ Repository list dropdown button
 .popup .popuptext {
     visibility: hidden;
     width: 160px;
-    background-color: #555;
-    color: #fff;
+    background-color: #FFFF00;
+    color: #000000;
     text-align: center;
     border-radius: 6px;
+     border: 2px solid #000000;
     padding: 8px 0;
     position: absolute;
     z-index: 1;
@@ -281,10 +278,13 @@ Repository list dropdown button
 .popup .popuptext::after {
     content: "";
     position: absolute;
-    margin-left: -5px;
-    border-width: 5px;
+    top: 100%;
+    left: 50%;
+     border: 2px solid #73AD21;
+    margin-left: -10px;
+    border-width: 10px;
     border-style: solid;
-    border-color: #555 transparent transparent transparent;
+    border-color: #000000 transparent transparent transparent;
 }
 
 /* Toggle this class - hide and show the popup */
@@ -292,6 +292,11 @@ Repository list dropdown button
     visibility: visible;
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;
+}
+.popup .hide {
+    visibility: hidden;
+    -webkit-animation: fadeOut 1s;
+    animation: fadeOut 1s;
 }
 
 /* Add animation (fade in the popup) */
@@ -475,46 +480,6 @@ Repository list dropdown button
     color: #787777;
     text-align: center;
   }
-/*popUp Stuff*/
-
-/* Popup container - can be anything you want */
-.popup {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-/* The actual popup */
-.popup .popuptext {
-    visibility: hidden;
-    width: 160px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 8px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -80px;
-}
-
-/* Popup arrow */
-.popup .popuptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
-}
 
 .container {
   margin-top: 20px;
