--- a/views/charts.html
+++ b/views/charts.html
@@ -18,6 +18,8 @@
 td, th {
   padding: 4px 10px;
 }
+
+
   </style>
 
  <script src="http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-v4.0.11.js"></script>
@@ -178,13 +180,8 @@ td, th {
         </div>
 
       </script>
-      <script id='specialPopup' type="text/x-handlebars-template"><div style="text-align:center" class="popup">
-          <span class="popuptext" id="myPopup">A Simple Popup!</span>
-      </div>
-        
-      </script>
-      <div id=popUpContainer></div>
 
+      <div id="popupDetail"></div>
       <div id='dashboard'></div>
 
 
@@ -198,7 +195,9 @@ td, th {
             <button class='button button3' type="button" id='myBtn' align="right">'Click for default view'</button>
           
         </div>
-
+        <div class="popup" align='right' style="left: 400px"">
+        <span class="popuptext" id="myPopup">Click timeline bars to see developer contribution for each sprint</span>
+        </div>
       </script>
       <div class = "row">
            <div>
@@ -215,6 +214,7 @@ td, th {
           <div>
 
       <div id="summary"></div>
+      
 
       <div class = "row">       
         <div>
@@ -230,6 +230,7 @@ td, th {
       <div id="info"></div>
       <div id = 'dynamicBarGraph'></div>
       <script id='dynamicChart' type="text/x-handlebars-template">
+
         <h2>General Trend chart: Comparison of multiple project statistics</h2>
         <div style='background-color: #F2EDE4'>
                  <div style='background-color: #F2EDE4' class="container" style="margin-top: 20px;">
@@ -251,7 +252,15 @@ td, th {
       </script>          
       </div>
 
+<script id="popUp_template">
 
+      <div class="popup" style="left: 400px">
+        <span class="popuptext" id="pullPop1"> '1.' Hover on the histogram to see the developer contributions per release on the pie chart.</span>
+      </div>
+      <div class="popup" style="left: 800px;">
+        <span class="popuptext" id="pullPop2"> '2.' Hover the pie Chart to see contributions of each developer on that release</span>
+      </div>
+</script>
 
       <script>
 
@@ -297,6 +306,7 @@ function filterFunction() {
         }
     }
 }
+
 </script>
 
 
