User Interface testing completed

--- a/views/charts.html
+++ b/views/charts.html
@@ -65,7 +65,7 @@ td, th {
   </div>
   <div class="Ocolumn4" style="background-color:black;">
       <div class="repodropdown"  style="float:right">
-        <button class="repodropbtn" >Repositories</button>
+        <button class="repodropbtn" id="reposListDrop" >Repositories</button>
         <div class="repodropdown-content">
           {{#each repos}}
           <a>{{repo}}</a>
