--- a/views/organisation.hbs
+++ b/views/organisation.hbs
@@ -244,11 +244,11 @@ hr {
       <p>Please select the organisation you want to evaluate from the drop down.</p>
       <hr>
         <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">Organisation List</button>
+          <button type="button" id = "chooseOrg" class="dropbtn">Organisation List</button>
           <div id="myDropdown" class="dropdown-content">
             <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
             {{#each orgNames}}
-            <a href="../users/orgDetails/{{@index}}" >{{this}}</a>
+            <a id={{@index}} href="../users/orgDetails/{{@index}}" >{{this}}</a>
             {{/each}}
           </div>
         </div>
@@ -263,13 +263,13 @@ hr {
       <p>Please select the repository you want to evaluate from the drop down. Feel free to make use of the search option.</p>
       <hr>
         <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn">Available Repos</button>
+          <button id = "repoList"  class="dropbtn">Available Repos</button>
           <div id="myDropdown" class="dropdown-content">
             <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
             {{#each repoNames}}
 
 
-            <a href="/users/charts/{{@index}}" >{{this}}</a>
+            <a id ={{@index}} href="/users/charts/{{@index}}" >{{this}}</a>
 
             {{/each}}
           </div>
